deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: workshop

spec:
  replicas: 3

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend
        image: nginx:01
        ports:
        - containerPort: 80
