service.yml

apiVersion: v1
kind: Service
metadata:
  name: frontend-nodeport
  namespace: workshop

spec:
  selector:
    app: frontend
    
  ports:
  - port: 80
    targetport: 80
    nodePort: 30080

  type: NodePort

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-lb
  namespace: workshop

spec:
  selector:
    app: frontend

  ports:
  - port: 80
    targetPort: 80

  type: LoadBalancer

---
