ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: workshop
spec:
  rules:
  - host: app.example.com   #Your domain name
    http:
      paths:
      - path: /
        pathType: prefix

        backend:
          service:
            name: frontend-service
            port:
              number:80
