networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-nginx

spec:
  podSelector:
    matchLabels:
      app: nginx

  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
